fix: inter-node networking issue

--- a/ansible/playbooks/create_cluster.yaml
+++ b/ansible/playbooks/create_cluster.yaml
@@ -1,11 +1,11 @@
 ---
 - name: Setup Control Planes
-  hosts: control-planes
+  hosts: controlplanes
   become: true
   roles:
-    - control_planes
+    - control-plane-setup
 - name: Setup Workers
   hosts: workers
   become: true
   roles:
-    - workers
+    - worker-setup
